--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-day-picker": "^8.8.2",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.1",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
     "react-rating-stars-component": "^2.2.0",
