--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# REACT_APP_BASE_API=http://localhost:3000/api/v1.0
-REACT_APP_BASE_API=https://api.mebeltalongkajaya.com/api/v1.0
+REACT_APP_BASE_API=http://localhost:3000/api/v1.0
+# REACT_APP_BASE_API=https://api.mebeltalongkajaya.com/api/v1.0
 
 PORT=3001
