--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@tanstack/react-query": "^4.35.3",
     "@testing-library/jest-dom": "^5.17.0",
@@ -21,6 +22,7 @@
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "dateformat": "^5.0.3",
+    "flowbite-react": "^0.6.4",
     "hero-slider": "^3.2.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
@@ -74,6 +76,6 @@
   "devDependencies": {
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.5"
   }
 }
